--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
@@ -22,7 +23,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
